[FEATURE] CM-XX: Implement cancel/approve appointment
