# src/main/java/com/nexym/clinic/domain/appointment/model/AppointmentStatus.java
@@ -1,0 +1,5 @@
+package com.nexym.clinic.domain.appointment.model;
+
+public enum AppointmentStatus {
+    CANCELLED, PENDING, DONE
+}
