# src/main/java/com/nexym/clinic/domain/appointment/model/Status.java
@@ -1,6 +1,0 @@
-package com.nexym.clinic.domain.appointment.model;
-
-public enum Status {
-    PENDING,
-    DONE
-}
