# src/main/java/com/nexym/clinic/domain/availability/model/Availability.java
@@ -1,5 +1,6 @@
 package com.nexym.clinic.domain.availability.model;
 
+import com.nexym.clinic.domain.appointment.model.Appointment;
 import lombok.Builder;
 import lombok.Data;
 
@@ -7,12 +8,15 @@ import java.io.Serializable;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Set;
 
 @Data
 @Builder
 public class Availability implements Serializable {
 
     private Long id;
+    private Set<Appointment> appointments;
+    private Long doctorId;
     private LocalDateTime startDate;
     private LocalDateTime endDate;
 
